Initial implementation of action creation. Add projet boilerplate

--- a/.env-sample
+++ b/.env-sample
@@ -1,4 +1,6 @@
 # Copy this file to local-env.sh
 # cp local-env.sh.sample local-env.sh
 
+export NODE_ENV=development
 export PORT=9000
+export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
