--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,13 @@
 {
     "parser": "babel-eslint",
-    
+    "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module",
+        "ecmaFeatures": {
+          "module": true
+        },
+    },
+
     "env": {
         "browser":    true,
         "amd":        true,
@@ -51,11 +58,10 @@
         // disable requirements for strict spacing rules in object properties or assignments
         "key-spacing":          0,
         "no-multi-spaces":      0,
+        "keyword-spacing":      2,
 
         "quotes":               0, // allow both single and double quotes
-        "space-after-keywords": 1,
         "space-infix-ops":      1,
-        "space-return-throw-case": 1,
         "strict":               0
     }
 }
