--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "babel-cli": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "bluebird": "^3.3.4",
+    "body-parser": "^1.15.0",
+    "change-case": "^2.3.1",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
