--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "superagent": "^1.8.0"
   },
   "scripts": {
+    "postinstall": "bash ./tools/run-migrations.sh",
     "start": "source .env && nodemon --watch ./src -e js --exec \"babel-node --presets es2015 src/index.js\"",
     "ci": "bash ./tools/ci.sh",
     "eslint": "eslint --ext .js ./src",
