--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "joi": "^8.0.4",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
@@ -24,6 +25,7 @@
     "winston": "^2.2.0"
   },
   "devDependencies": {
+    "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.0-beta.5",
     "chai": "^3.5.0",
     "csv": "^0.4.6",
@@ -31,11 +33,14 @@
     "jscs": "^2.11.0",
     "mocha": "^2.4.5",
     "nodemon": "^1.9.1",
-    "superagent": "^1.8.0"
+    "superagent": "^1.8.0",
+    "supertest": "^1.2.0",
+    "supertest-as-promised": "^3.0.0"
   },
   "scripts": {
     "postinstall": "bash ./tools/run-migrations-and-seeds.sh",
     "start": "source .env && nodemon --watch ./src -e js --exec \"babel-node --presets es2015 src/index.js\"",
+    "test": "source .env-test && mocha --compilers js:babel-core/register",
     "ci": "bash ./tools/ci.sh",
     "eslint": "eslint --ext .js ./src",
     "jscs": "jscs ./src"
