Began implementation of image action support

--- a/.env-sample
+++ b/.env-sample
@@ -4,3 +4,6 @@
 export NODE_ENV=development
 export PORT=9000
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
+export BUCKET_NAME=wappuapp
+export GCS_PROJECT_ID=<INSERT HERE>
+export GCS_API_KEY=<INSERT BASE64 ENCODED HERE>
