--- a/package.json
+++ b/package.json
@@ -28,9 +28,13 @@
   "devDependencies": {
     "babel-core": "^6.7.2",
     "babel-eslint": "^6.0.0-beta.5",
+    "babel-node-debug": "^2.0.0",
     "chai": "^3.5.0",
     "csv": "^0.4.6",
     "eslint": "2.2.x",
+    "fuse": "^0.4.0",
+    "fuse.js": "^2.2.0",
+    "iconv-lite": "^0.4.13",
     "jscs": "^2.11.0",
     "mocha": "^2.4.5",
     "mocha-cli": "^1.0.0",
@@ -41,6 +45,7 @@
   },
   "scripts": {
     "postinstall": "bash ./tools/run-migrations-and-seeds.sh",
+    "debug": "babel-node-debug --debug-brk src/index.js",
     "start": "source .env && nodemon --watch ./src -e js --exec \"babel-node --presets es2015 src/index.js\"",
     "test": "source .env-test && mocha --compilers js:babel-core/register",
     "ci": "bash ./tools/ci.sh",
