--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
     "moment": "^2.12.0",
+    "moment-timezone": "^0.5.1",
     "morgan": "^1.7.0",
     "pg": "^4.5.1",
     "server-destroy": "^1.0.1",
