--- a/.env-sample
+++ b/.env-sample
@@ -4,6 +4,14 @@
 export NODE_ENV=development
 export PORT=9000
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
-export BUCKET_NAME=wappuapp
+export GCS_BUCKET_NAME=<INSERT HERE>
+export GCS_TYPE=<INSERT HERE>
 export GCS_PROJECT_ID=<INSERT HERE>
-export GCS_API_KEY=<INSERT BASE64 ENCODED HERE>
+export GCS_PRIVATE_KEY_ID=<INSERT HERE>
+export GCS_PRIVATE_KEY=<INSERT BASE64 HERE>
+export GCS_CLIENT_EMAIL=<INSERT HERE>
+export GCS_CLIENT_ID=<INSERT HERE>
+export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
+export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
+export GCS_AUTH_PROVIDER_X509_CERT_URL=<INSERT HERE>
+export GCS_CLIENT_X509_CERT_URL=<INSERT HERE>
