Fixed eslint warnings

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,13 +5,14 @@
         "sourceType": "module",
         "ecmaFeatures": {
           "module": true
-        },
+        }
     },
 
     "env": {
         "browser":    true,
         "amd":        true,
-        "node":       true
+        "node":       true,
+				"es6":        true
     },
 
     "globals": {
