Added fb configs to env files

--- a/.env-sample
+++ b/.env-sample
@@ -15,3 +15,5 @@ export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
 export GCS_AUTH_PROVIDER_X509_CERT_URL=<INSERT HERE>
 export GCS_CLIENT_X509_CERT_URL=<INSERT HERE>
+export FB_APP_ID=<INSERT HERE>
+export FB_APP_SECRET=<INSERT HERE>
