--- a/.env-test
+++ b/.env-test
@@ -12,3 +12,5 @@ export GCS_AUTH_URI=a
 export GCS_TOKEN_URI=a
 export GCS_AUTH_PROVIDER_X509_CERT_URL=a
 export GCS_CLIENT_X509_CERT_URL=a
+export FB_APP_ID=<INSERT HERE>
+export FB_APP_SECRET=<INSERT HERE>
