--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "npm": "2.x.x"
   },
   "license": "MIT",
+  "author": "Futurice Tammerforce <tammerforce@futurice.com> (http://tammerforce.com/)",
+  "contributors": [
+    "Tomi Turtiainen <tomi.turtiainen@gmail.com> (http://github.com/tomi)"
+  ],
   "dependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.6.5",
