Update documentation to get started

--- a/.env-sample
+++ b/.env-sample
@@ -1,19 +1,30 @@
-# Copy this file to local-env.sh
-# cp local-env.sh.sample local-env.sh
+#!/bin/bash
+
+# Guide:
+#
+# 1. Copy this file to .env
+#
+#    cp .env-sample .env
+#
+# 2. Fill the blanks
 
 export NODE_ENV=development
 export PORT=9000
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
-export GCS_BUCKET_NAME=<INSERT HERE>
-export GCS_TYPE=<INSERT HERE>
-export GCS_PROJECT_ID=<INSERT HERE>
-export GCS_PRIVATE_KEY_ID=<INSERT HERE>
-export GCS_PRIVATE_KEY=<INSERT BASE64 HERE>
-export GCS_CLIENT_EMAIL=<INSERT HERE>
-export GCS_CLIENT_ID=<INSERT HERE>
+
 export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
-export GCS_AUTH_PROVIDER_X509_CERT_URL=<INSERT HERE>
-export GCS_CLIENT_X509_CERT_URL=<INSERT HERE>
-export FB_APP_ID=<INSERT HERE>
-export FB_APP_SECRET=<INSERT HERE>
+export GCS_TYPE=service_account
+export GCS_BUCKET_NAME=
+export GCS_PROJECT_ID=
+export GCS_PRIVATE_KEY_ID=
+# This is a base64 encoded string of the private key
+export GCS_PRIVATE_KEY=
+export GCS_CLIENT_EMAIL=
+export GCS_CLIENT_ID=
+export GCS_AUTH_PROVIDER_X509_CERT_URL=
+export GCS_CLIENT_X509_CERT_URL=
+
+# Facebook Graph API details
+export FB_APP_ID=
+export FB_APP_SECRET=
