Try to fix travis conf and add secrets to test env too

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -1,16 +1,13 @@
 #!/bin/bash
 
-# Guide:
-#
-# 1. Copy this file to .env
-#
-#    cp .env-sample .env
-#
-# 2. Fill the blanks
+export NODE_ENV=test
+export PORT=9001
+export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp_test
 
-export NODE_ENV=development
-export PORT=9000
-export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
+# Configure these secrets, do not commit them to this sample
+# Travis CI:
+#   Ensure that all secrets are defined for travis in build environment
+#   variables. Do not commit them in this file
 
 export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
@@ -28,13 +25,3 @@ export GCS_CLIENT_X509_CERT_URL=
 # Facebook Graph API details
 export FB_APP_ID=
 export FB_APP_SECRET=
-
-# Set prompt prefix
-PREFIX="[wappu] "
-if [[ $PS1 != *"$PREFIX"* ]]
-then
-    export PS1="$PREFIX $PS1"
-    echo "Environment variables set!"
-else
-    echo "Environment variables updated!"
-fi
