Require api token in production env

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -3,6 +3,8 @@
 export NODE_ENV=test
 export PORT=9001
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp_test
+export DISABLE_AUTH=true
+export API_TOKEN=token
 
 # Configure these secrets, do not commit them to this sample
 # Travis CI:
