--- a/.env-sample
+++ b/.env-sample
@@ -11,6 +11,8 @@
 export NODE_ENV=development
 export PORT=9000
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp
+export DISABLE_AUTH=true
+export API_TOKEN=token
 
 export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
