Fix tests and add a few more cases

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -4,12 +4,17 @@ export NODE_ENV=test
 export PORT=9001
 export DATABASE_URL=postgres://wappu:wappu@127.0.0.1:5432/wappuapp_test
 export DISABLE_AUTH=true
+export DISABLE_THROTTLE=true
 export API_TOKEN=token
 
 # Configure these secrets, do not commit them to this sample
 # Travis CI:
 #   Ensure that all secrets are defined for travis in build environment
 #   variables. Do not commit them in this file
+# Locally:
+#   If there is no separate google cloud bucket, you can remove all empty
+#   slots from this file and keep all secrets in .env. Then make sure the .env
+#   is loaded before you run npm test.
 
 export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
 export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
