Install finnish language pack in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ before_script:
   - psql -U postgres -c "create extension postgis"
 
 before_install:
+  - sudo apt-get update && sudo apt-get --reinstall install -qq language-pack-fi
    - npm install -g npm@'2.x.x'
-
+   
 before_script:
   - psql -a -f ./tools/init-database.sql -U postgres
   - npm install
