--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ before_script:
 
 before_install:
   - sudo apt-get update && sudo apt-get --reinstall install -qq language-pack-fi
+  - sudo /etc/init.d/postgresql stop
+  - sudo /etc/init.d/postgresql start 9.4
   - npm install -g npm@'2.x.x'
 
 before_script:
