Added database initialization to travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ before_install:
 
 before_script:
   - psql -a -f ./tools/init-database.sql -U postgres
+  - bash ./tools/knex-down-up.sh
   - npm install
 
 script:
