--- a/.env-test-sample
+++ b/.env-test-sample
@@ -16,19 +16,19 @@ export API_TOKEN=token
 #   slots from this file and keep all secrets in .env. Then make sure the .env
 #   is loaded before you run npm test.
 
-export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
-export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
-export GCS_TYPE=service_account
-export GCS_BUCKET_NAME=
-export GCS_PROJECT_ID=
-export GCS_PRIVATE_KEY_ID=
+# export GCS_AUTH_URI=https://accounts.google.com/o/oauth2/auth
+# export GCS_TOKEN_URI=https://accounts.google.com/o/oauth2/token
+# export GCS_TYPE=service_account
+# export GCS_BUCKET_NAME=
+# export GCS_PROJECT_ID=
+# export GCS_PRIVATE_KEY_ID=
 # This is a base64 encoded string of the private key
-export GCS_PRIVATE_KEY=
-export GCS_CLIENT_EMAIL=
-export GCS_CLIENT_ID=
-export GCS_AUTH_PROVIDER_X509_CERT_URL=
-export GCS_CLIENT_X509_CERT_URL=
+# export GCS_PRIVATE_KEY=
+# export GCS_CLIENT_EMAIL=
+# export GCS_CLIENT_ID=
+# export GCS_AUTH_PROVIDER_X509_CERT_URL=
+# export GCS_CLIENT_X509_CERT_URL=
 
 # Facebook Graph API details
-export FB_APP_ID=
-export FB_APP_SECRET=
+# export FB_APP_ID=
+# export FB_APP_SECRET=
