Implemented requested changes

--- a/.env-sample
+++ b/.env-sample
@@ -31,6 +31,11 @@ export GCS_CLIENT_X509_CERT_URL=
 export FB_APP_ID=
 export FB_APP_SECRET=
 
+# In 's' how often posts get +1 baseline hotness score.
+export FEED_INFLATION_INTERVAL=45000
+# January 1st, 2017. Time of 0 baseline hot score.
+export FEED_ZERO_TIME=1483228800
+
 # Set prompt prefix
 PREFIX="[wappu] "
 if [[ $PS1 != *"$PREFIX"* ]]
