--- a/.env-test-sample
+++ b/.env-test-sample
@@ -32,3 +32,8 @@ export API_TOKEN=token
 # Facebook Graph API details
 # export FB_APP_ID=
 # export FB_APP_SECRET=
+
+# In 's' how often posts get +1 baseline hotness score.
+# export FEED_INFLATION_INTERVAL=
+# Time of 0 baseline hot score.
+# export FEED_ZERO_TIME=
