--- a/.env-sample
+++ b/.env-sample
@@ -35,6 +35,8 @@ export FB_APP_SECRET=
 export FEED_INFLATION_INTERVAL=45000
 # January 1st, 2017. Time of 0 baseline hot score.
 export FEED_ZERO_TIME=1483228800
+# Base logarithm for calculating diminishing returns votes have on hot score.
+export FEED_BASE_LOG=9
 
 # Set prompt prefix
 PREFIX="[wappu] "
