Event default radius as env variable

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -37,3 +37,5 @@ export API_TOKEN=token
 # export FEED_INFLATION_INTERVAL=
 # Time of 0 baseline hot score.
 # export FEED_ZERO_TIME=
+# Default radius in 'km' within which user can check into the event.
+#export EVENT_RADIUS=
