--- a/.env-test-sample
+++ b/.env-test-sample
@@ -41,3 +41,7 @@ export API_TOKEN=token
 # export FEED_BASE_LOG=9
 # Default radius in 'km' within which user can check into the event.
 # export EVENT_RADIUS=
+# Date in ISO format which defines the start of returned date range.
+# export MOOD_START_DATE=2017-03-14T22:00:00.000Z
+# Date in ISO format which defines the start of returned date range.
+# export MOOD_END_DATE=2017-05-02T22:00:00.000Z
