Calculating distance using geolib

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.13.4",
     "fb": "^1.0.2",
     "gcloud": "^0.29.0",
+    "geolib": "^2.0.22",
     "gm": "^1.21.1",
     "joi": "^8.0.4",
     "knex": "^0.10.0",
