Changes as per requested

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -40,7 +40,7 @@ export API_TOKEN=token
 # Base logarithm for calculating diminishing returns votes have on hot score.
 # export FEED_BASE_LOG=9
 # Default radius in 'm' within which user can check into the event.
-# export EVENT_RADIUS=
+# export DEFAULT_EVENT_RADIUS=
 # Date in ISO format which defines the start of returned date range. Inclusive.
 # export MOOD_START_DATE=2017-03-14T22:00:00.000Z
 # Date in ISO format which defines the end of returned date range. Exclusive.
