--- a/.env-sample
+++ b/.env-sample
@@ -38,7 +38,7 @@ export FEED_ZERO_TIME=1483228800
 # Base logarithm for calculating diminishing returns votes have on hot score.
 export FEED_BASE_LOG=9
 # Default radius in 'm' within which user can check into the event.
-export EVENT_RADIUS=400
+export DEFAULT_EVENT_RADIUS=400
 # Date in ISO format which defines the start of returned date range. Inclusive.
 export MOOD_START_DATE=2017-03-14T22:00:00.000Z
 # Date in ISO format which defines the end of returned date range. Exclusive.
