Use redis for throttling

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "moment-timezone": "^0.5.1",
     "morgan": "^1.7.0",
     "pg": "^4.5.1",
+    "redis": "^2.7.1",
     "request": "^2.69.0",
     "server-destroy": "^1.0.1",
     "streamifier": "^0.1.1",
