--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gcloud": "^0.29.0",
     "geolib": "^2.0.22",
     "gm": "^1.21.1",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^18.0.0",
     "joi": "^8.0.4",
     "knex": "^0.10.0",
     "lodash": "^4.6.1",
