--- a/.env-sample
+++ b/.env-sample
@@ -29,6 +29,9 @@ export GCS_CLIENT_ID=
 export GCS_AUTH_PROVIDER_X509_CERT_URL=
 export GCS_CLIENT_X509_CERT_URL=
 
+export GSHEETS_API_KEY=
+export GSHEETS_EVENTS='[{"id": "<id>", "city": "<Cityname>"}]'
+
 # Facebook Graph API details
 export FB_APP_ID=
 export FB_APP_SECRET=
