Fixed a small blemish in samples

--- a/.env-test-sample
+++ b/.env-test-sample
@@ -30,7 +30,7 @@ export API_TOKEN=token
 # export GCS_CLIENT_X509_CERT_URL=
 
 # export GSHEETS_API_KEY=
-# export GSHEETS_EVENTS='[{"id": "<id>", "city": "<Cityname>"}]'
+# export GSHEETS_EVENTS=
 
 # Facebook Graph API details
 # export FB_APP_ID=
