Generate image name with uuid

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "request": "^2.69.0",
     "server-destroy": "^1.0.1",
     "streamifier": "^0.1.1",
+    "uuid": "^3.0.1",
     "winston": "^2.2.0"
   },
   "devDependencies": {
