Fix radio program titles

--- a/data/wappu-radio-program.json
+++ b/data/wappu-radio-program.json
@@ -3,7 +3,7 @@
     "id": "id",
     "start": "2017-03-25T09:00:00.000Z",
     "end": "2017-04-19T14:00:00+03:00",
-    "title": "Broadcast starts on Wed April 19 at 14:00",
+    "title": "Live Wed April 19th at 14:00",
     "host": "",
     "prod": "",
     "desc": "",
