--- a/data/wappu-radio-program.json
+++ b/data/wappu-radio-program.json
@@ -767,18 +767,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/kankkarankkaakakattimeen-fs8.png"
   },
   {
-    "id": "033f0a26-961f-4527-bb72-c8f4d322df33",
-    "start": "2017-04-23T09:00:00+03:00",
-    "end": "2017-04-23T11:00:00+03:00",
-    "title": "Känkkäränkkää käkättimeen",
-    "host": "Lorens",
-    "prod": "Jaketus",
-    "desc": "Mitä yhteistä on balkan beatseilla, pannullisella kahvia, joikauksella ja yhdellä aamukiukkuisuuden ammattilaisella? No nehän ovat kaikki tietenkin känkkäränkänkarkoittimia, joiden avulla näistäkin sunnuntaiaamuista selvitään. Kyllä se siitä.",
-    "timestamp": "2017-04-12T13:17:18+03:00",
-    "photo": "https://wappuradio.fi/img/host/kankkarankkaakakattimeen-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/kankkarankkaakakattimeen-fs8.png"
-  },
-  {
     "id": "033cb767-4c1b-4c06-b6aa-a55785173bb7",
     "start": "2017-04-21T00:00:00+03:00",
     "end": "2017-04-21T07:00:00+03:00",
@@ -827,18 +815,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/iltapaivaklassinen-fs8.png"
   },
   {
-    "id": "53a19cc0-b22b-4e65-8f62-725023f42ac2",
-    "start": "2017-04-28T22:00:00+03:00",
-    "end": "2017-04-29T00:00:00+03:00",
-    "title": "TBA",
-    "host": "TBA",
-    "prod": "TBA",
-    "desc": "TBA",
-    "timestamp": "2017-04-14T08:39:53+03:00",
-    "photo": "https://wappuradio.fi/img/host/tba-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/tba-fs8.png"
-  },
-  {
     "id": "5684324e-b523-47ee-a5f7-89bbbbfbf173",
     "start": "2017-04-29T20:00:00+03:00",
     "end": "2017-04-29T22:00:00+03:00",
@@ -861,18 +837,6 @@
     "timestamp": "2017-04-14T08:41:26+03:00",
     "photo": "https://wappuradio.fi/img/host/tba-fs8.png",
     "thumb": "https://wappuradio.fi/img/host/thumb/tba-fs8.png"
-  },
-  {
-    "id": "e4402a56-d23a-4826-af1d-bbb012cce2da",
-    "start": "2017-04-19T14:00:00+03:00",
-    "end": "2017-04-19T16:00:00+03:00",
-    "title": "HYPE!",
-    "host": "PunaJussi, Helge, Helky, Noora",
-    "prod": "",
-    "desc": "Kaksi viikkoa. HYPE! Aasinsiltoja. HYPE! Loistavaa musaa. HYPE! Live-musaa. HYPE! Simaa. HYPE! Tapahtumia. HYPE! Kaste. HYPE!\r\n\r\nMaailmassa on kaksi tahoa, jotka osaavat Hypen: ranskalainen Daft Punk ja tamperelainen Rakkauden Wappuradio. Vain toinen näistä lunastaa kaikki lupauksensa! Tule siis kuulemaan, miksi tamperelainen Wappu on wapuista wapuin ja Rakkauden Wappuradio wappuradioista rakastettavin.",
-    "timestamp": "2017-04-14T08:53:07+03:00",
-    "photo": "https://wappuradio.fi/img/host/hype-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/hype-fs8.png"
   },
   {
     "id": "70bf532f-246a-4ecc-a956-bb34fcefe1c5",
@@ -1305,5 +1269,41 @@
     "timestamp": "2017-04-15T14:32:51+03:00",
     "photo": "https://wappuradio.fi/img/host/showroomdummies-fs8.png",
     "thumb": "https://wappuradio.fi/img/host/thumb/showroomdummies-fs8.png"
+  },
+  {
+    "id": "53a19cc0-b22b-4e65-8f62-725023f42ac2",
+    "start": "2017-04-28T22:00:00+03:00",
+    "end": "2017-04-29T00:00:00+03:00",
+    "title": "Maxwellin epäyhtälöitä",
+    "host": "lauhanen",
+    "prod": "JSuvanto",
+    "desc": "Kuuntelemme progressiivista musiikkia, tutustumme elämän marginaali-ilmiöihin, mietimme elämän tarkoitusta ja voimme yhdessä pahoin! Studioon ei kannata soittaa, koska puheluusi ei vastata. Toivemusiikkia ei kannata pyytää, koska sitä ei soiteta!\r\n",
+    "timestamp": "2017-04-17T00:01:13+03:00",
+    "photo": "https://wappuradio.fi/img/host/maxwellinepayhtaloita-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/maxwellinepayhtaloita-fs8.png"
+  },
+  {
+    "id": "033f0a26-961f-4527-bb72-c8f4d322df33",
+    "start": "2017-04-23T09:00:00+03:00",
+    "end": "2017-04-23T11:00:00+03:00",
+    "title": "Känkkäränkkää käkättimeen",
+    "host": "Lorens",
+    "prod": "Ketku, Jaketus",
+    "desc": "Mitä yhteistä on balkan beatseilla, pannullisella kahvia, joikauksella ja yhdellä aamukiukkuisuuden ammattilaisella? No nehän ovat kaikki tietenkin känkkäränkänkarkoittimia, joiden avulla näistäkin sunnuntaiaamuista selvitään. Kyllä se siitä.",
+    "timestamp": "2017-04-17T18:24:19+03:00",
+    "photo": "https://wappuradio.fi/img/host/kankkarankkaakakattimeen-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/kankkarankkaakakattimeen-fs8.png"
+  },
+  {
+    "id": "e4402a56-d23a-4826-af1d-bbb012cce2da",
+    "start": "2017-04-19T14:00:00+03:00",
+    "end": "2017-04-19T16:00:00+03:00",
+    "title": "HYPE!",
+    "host": "PunaJussi, Helge, Helky, Noora",
+    "prod": "PunaJussi",
+    "desc": "Kaksi viikkoa. HYPE! Aasinsiltoja. HYPE! Loistavaa musaa. HYPE! Live-musaa. HYPE! Simaa. HYPE! Tapahtumia. HYPE! Kaste. HYPE!\r\n\r\nMaailmassa on kaksi tahoa, jotka osaavat Hypen: ranskalainen Daft Punk ja tamperelainen Rakkauden Wappuradio. Vain toinen näistä lunastaa kaikki lupauksensa! Tule siis kuulemaan, miksi tamperelainen Wappu on wapuista wapuin ja Rakkauden Wappuradio wappuradioista rakastettavin.",
+    "timestamp": "2017-04-18T04:56:05+03:00",
+    "photo": "https://wappuradio.fi/img/host/hype-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/hype-fs8.png"
   }
 ]
