Updated radio programs

--- a/data/wappu-radio-program.json
+++ b/data/wappu-radio-program.json
@@ -95,18 +95,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/saattaasisaltaapahkinaa-fs8.png"
   },
   {
-    "id": "620995e0-58e6-42c5-95a8-c46f19aec664",
-    "start": "2017-04-29T14:00:00+03:00",
-    "end": "2017-04-29T16:00:00+03:00",
-    "title": "Herkkä hetki",
-    "host": "AnRai, zordiack, Puh",
-    "prod": "zar",
-    "desc": "Herkkä Hetki haluaa tietää mikä biisi on juuri Sinulle tärkeä ja miksi!\r\nTuoko Pink Floyd elävästi mieleen suurimman teinirakkautesi tai lohduttaako Popeda surun hetkellä?\r\nKerro meille, mikä kappale on sinulle tavalla tai toisella erityinen sekä biisiin liittyvä tarina lomakkeemme kautta:\r\nhttps://tinyurl.com/herkkahetki2017",
-    "timestamp": "2017-04-06T18:59:52+03:00",
-    "photo": "https://wappuradio.fi/img/host/herkkahetki-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/herkkahetki-fs8.png"
-  },
-  {
     "id": "c7311899-b405-4456-8596-54f74732a893",
     "start": "2017-04-29T11:00:00+03:00",
     "end": "2017-04-29T13:00:00+03:00",
@@ -995,18 +983,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/herkkahetki-fs8.png"
   },
   {
-    "id": "04c906ab-43ec-48fe-ac75-e376a84dd35b",
-    "start": "2017-04-23T13:00:00+03:00",
-    "end": "2017-04-23T18:00:00+03:00",
-    "title": "Wappuradio LIVE!",
-    "host": "Bändit & Rakkaus",
-    "prod": "Jaketus",
-    "desc": "Wappuradio soittaa mitä parhainta, oudointa ja kiehtovinta musiikkia kaksi viikkoa levyiltä Wapun aikana. Nyt on kuitenkin taas ekstraherkkua tarjolla! Levyjen sijaan sunnuntaina radion musiikki soitetaan livenä TTY:n etunurtsilla, Riemurinne-areenalla. Virittäydy siis vastaanottimesi ääreen koko päiväksi nauttimaan Suomen parhaiden bändien joukosta kootusta kattauksesta! Tai vielä parempaa, ota kaverit mukaan ja tule Hervantaan viettämään piknik-päivää! Keikat alkavat kello 13 ja jatkuvat aina 18 asti. Paikalla myös liuta huikeita ruokakojuja, wappuradio, aurinko, wappukansa! Bändien välissä kuuntelijoita viihdyttää Suomen parhaan Rakkauden Wappuradion juontajat ja studiotrubaduuriduo Sipilän Serkut.\r\n\r\n13:00 Työelämän uhrit ►https://soundcloud.com/ty-el-m-n-uhrit\r\n14:15 Jukka Pojan Poika ja The Roopesalmiset ►https://soundcloud.com/jukkapojanpoika\r\n15:45 Elimäki ► https://soundcloud.com/elim-ki\r\n17:00 Torvikopla ► http://www.torvikopla.net/kuuntele/",
-    "timestamp": "2017-04-14T23:21:52+03:00",
-    "photo": "https://wappuradio.fi/img/host/wappuradiolive-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/wappuradiolive-fs8.png"
-  },
-  {
     "id": "e3c8727b-262d-483b-b9f4-c10327b25e93",
     "start": "2017-04-22T13:00:00+03:00",
     "end": "2017-04-22T15:00:00+03:00",
@@ -1091,18 +1067,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/suklaatasamettia-fs8.png"
   },
   {
-    "id": "5684324e-b523-47ee-a5f7-89bbbbfbf173",
-    "start": "2017-04-29T20:00:00+03:00",
-    "end": "2017-04-29T22:00:00+03:00",
-    "title": "Kolmen soinnun tähteet",
-    "host": "kurkku & Teemu",
-    "prod": "Jaketus",
-    "desc": "Kolmen soinnun tähteen täräyttää radioaalloille Wapun parhaat punk- ja skarytmit! Vedä tennarit jalkaan, kiristä henkselit ja lähde musiikkimatkalle kurkun ja Teemun kanssa!",
-    "timestamp": "2017-04-18T10:45:06+03:00",
-    "photo": "https://wappuradio.fi/img/host/kolmensoinnuntahteet-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/kolmensoinnuntahteet-fs8.png"
-  },
-  {
     "id": "fae67617-128b-4082-85ce-90d024df5650",
     "start": "2017-04-25T22:00:00+03:00",
     "end": "2017-04-26T00:00:00+03:00",
@@ -1113,18 +1077,6 @@
     "timestamp": "2017-04-18T11:02:45+03:00",
     "photo": "https://wappuradio.fi/img/host/radioprog-fs8.png",
     "thumb": "https://wappuradio.fi/img/host/thumb/radioprog-fs8.png"
-  },
-  {
-    "id": "d3b4be8a-22ad-42c5-a5e4-70def67180dc",
-    "start": "2017-04-23T07:00:00+03:00",
-    "end": "2017-04-23T09:00:00+03:00",
-    "title": "TBA",
-    "host": "TBA",
-    "prod": "TBA",
-    "desc": "TBA",
-    "timestamp": "2017-04-18T12:54:19+03:00",
-    "photo": "https://wappuradio.fi/img/host/tba-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/tba-fs8.png"
   },
   {
     "id": "b09c3f55-8ffd-4cca-aa46-dc740c9a7c83",
@@ -1149,18 +1101,6 @@
     "timestamp": "2017-04-18T15:03:22+03:00",
     "photo": "https://wappuradio.fi/img/host/overdoseoffinnishpop-fs8.png",
     "thumb": "https://wappuradio.fi/img/host/thumb/overdoseoffinnishpop-fs8.png"
-  },
-  {
-    "id": "571c265a-d789-4070-9fc3-d8a28ed38ccb",
-    "start": "2017-04-21T17:00:00+03:00",
-    "end": "2017-04-21T19:00:00+03:00",
-    "title": "Pelastakaa Aasit!",
-    "host": "Helge \"tenderi\" Jalonen & Antti \"Mutanen\" mutsku",
-    "prod": "JSuvanto",
-    "desc": "Tarina menee näin: alussa soitamme satunnaisen kappaleen. Toimittajien tehtävänä on luoda uskottava ja kantava silta sen yli seuraavaan kappaleeseen. Tähän kappaleeseen toinen toimittaja vastaa uudella, paremmalla sillalla soittaen perään seuraavan kappaleen. \r\n\r\nKuinka kauas voi päästä kappaleesta X? Oletteko koskaan miettineet miltä kuulostaisi Hitchball suoritettuna peukalokyytien sisään aasinsiltoina kappaleiden välillä? Kuinka paljon mutsku soittaa musiikkia josta et todennäköisesti oo edes kuullut? Entä löydetäänkö vielä reitti takaisin X:n? ",
-    "timestamp": "2017-04-18T15:03:40+03:00",
-    "photo": "https://wappuradio.fi/img/host/pelastakaaaasit-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/pelastakaaaasit-fs8.png"
   },
   {
     "id": "4bfe62d3-e0f4-40fb-9973-996d0981ec47",
@@ -1259,30 +1199,6 @@
     "thumb": "https://wappuradio.fi/img/host/thumb/suunsoittoa-fs8.png"
   },
   {
-    "id": "f2bc354a-f5e1-4f22-92e0-6e6ee5276bf1",
-    "start": "2017-04-20T17:00:00+03:00",
-    "end": "2017-04-20T18:00:00+03:00",
-    "title": "Kysy Luojalta",
-    "host": "Janne Eskola, Ville Korpiluoto, Luoja",
-    "prod": "JSuvanto",
-    "desc": "Oletko sinäkin toisinaan yrittänyt etsiä vastauksia, jotka Luoja yksin tietää – ja hänkään ei kerro? No nyt kertoo! Kysy Luojalta on Wappuradion asiantuntijaohjelma, jossa Luoja vastaa kuuntelijoiden kysymyksiin. Älä enää jää epätietoisuuteen, vaan kuuntele Wappuradiota ja Kysy Luojalta! Kysymykset Luojalle osoitteen ville@korpiluoto.fi kautta.",
-    "timestamp": "2017-04-19T11:09:10+03:00",
-    "photo": "https://wappuradio.fi/img/host/kysyluojalta-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/kysyluojalta-fs8.png"
-  },
-  {
-    "id": "0407fb17-634e-49da-8da3-bfc8de079fcf",
-    "start": "2017-04-24T17:00:00+03:00",
-    "end": "2017-04-24T18:00:00+03:00",
-    "title": "Kysy Luojalta",
-    "host": "Janne Eskola, Ville Korpiluoto, Luoja",
-    "prod": "JSuvanto",
-    "desc": "Oletko sinäkin toisinaan yrittänyt etsiä vastauksia, jotka Luoja yksin tietää – ja hänkään ei kerro? No nyt kertoo! Kysy Luojalta on Wappuradion asiantuntijaohjelma, jossa Luoja vastaa kuuntelijoiden kysymyksiin. Älä enää jää epätietoisuuteen, vaan kuuntele Wappuradiota ja Kysy Luojalta! Kysymykset Luojalle osoitteen ville@korpiluoto.fi kautta.",
-    "timestamp": "2017-04-19T11:09:17+03:00",
-    "photo": "https://wappuradio.fi/img/host/kysyluojalta-fs8.png",
-    "thumb": "https://wappuradio.fi/img/host/thumb/kysyluojalta-fs8.png"
-  },
-  {
     "id": "c35dd5b5-9c30-46c4-a04d-c9bd102a437f",
     "start": "2017-04-30T00:00:00+03:00",
     "end": "2017-04-30T07:00:00+03:00",
@@ -1305,5 +1221,89 @@
     "timestamp": "2017-04-19T17:24:03+03:00",
     "photo": "https://wappuradio.fi/img/host/ompeluseura-fs8.png",
     "thumb": "https://wappuradio.fi/img/host/thumb/ompeluseura-fs8.png"
+  },
+  {
+    "id": "620995e0-58e6-42c5-95a8-c46f19aec664",
+    "start": "2017-04-29T14:00:00+03:00",
+    "end": "2017-04-29T16:00:00+03:00",
+    "title": "Herkkä hetki",
+    "host": "AnRai, zordiack, Puh",
+    "prod": "zar",
+    "desc": "Herkkä Hetki haluaa tietää mikä biisi on juuri Sinulle tärkeä ja miksi!\r\nTuoko Pink Floyd elävästi mieleen suurimman teinirakkautesi tai lohduttaako Popeda surun hetkellä?\r\nKerro meille, mikä kappale on sinulle tavalla tai toisella erityinen sekä biisiin liittyvä tarina lomakkeemme kautta: \r\n<a href=\"https://tinyurl.com/herkkahetki2017\">https://tinyurl.com/herkkahetki2017</a>",
+    "timestamp": "2017-04-20T13:35:22+03:00",
+    "photo": "https://wappuradio.fi/img/host/herkkahetki-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/herkkahetki-fs8.png"
+  },
+  {
+    "id": "f2bc354a-f5e1-4f22-92e0-6e6ee5276bf1",
+    "start": "2017-04-20T17:00:00+03:00",
+    "end": "2017-04-20T18:00:00+03:00",
+    "title": "Kysy Luojalta",
+    "host": "Janne Eskola, Ville Korpiluoto, Luoja",
+    "prod": "JSuvanto",
+    "desc": "Oletko sinäkin toisinaan yrittänyt etsiä vastauksia, jotka Luoja yksin tietää – ja hänkään ei kerro? No nyt kertoo! Kysy Luojalta on Wappuradion asiantuntijaohjelma, jossa Luoja vastaa kuuntelijoiden kysymyksiin. Älä enää jää epätietoisuuteen, vaan kuuntele Wappuradiota ja Kysy Luojalta! Kysymykset Luojalle osoitteen <a href=\"mailto:ville@korpiluoto.fi\">ville@korpiluoto.fi</a> kautta.",
+    "timestamp": "2017-04-20T13:52:38+03:00",
+    "photo": "https://wappuradio.fi/img/host/kysyluojalta-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/kysyluojalta-fs8.png"
+  },
+  {
+    "id": "0407fb17-634e-49da-8da3-bfc8de079fcf",
+    "start": "2017-04-24T17:00:00+03:00",
+    "end": "2017-04-24T18:00:00+03:00",
+    "title": "Kysy Luojalta",
+    "host": "Janne Eskola, Ville Korpiluoto, Luoja",
+    "prod": "JSuvanto",
+    "desc": "Oletko sinäkin toisinaan yrittänyt etsiä vastauksia, jotka Luoja yksin tietää – ja hänkään ei kerro? No nyt kertoo! Kysy Luojalta on Wappuradion asiantuntijaohjelma, jossa Luoja vastaa kuuntelijoiden kysymyksiin. Älä enää jää epätietoisuuteen, vaan kuuntele Wappuradiota ja Kysy Luojalta! Kysymykset Luojalle osoitteen <a href=\"mailto:ville@korpiluoto.fi\">ville@korpiluoto.fi</a> kautta.",
+    "timestamp": "2017-04-20T13:52:50+03:00",
+    "photo": "https://wappuradio.fi/img/host/kysyluojalta-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/kysyluojalta-fs8.png"
+  },
+  {
+    "id": "571c265a-d789-4070-9fc3-d8a28ed38ccb",
+    "start": "2017-04-21T17:00:00+03:00",
+    "end": "2017-04-21T19:00:00+03:00",
+    "title": "Pelastakaa Aasit!",
+    "host": "Helge \"tenderi\" Jalonen & Antti \"Mutanen\" mutsku",
+    "prod": "JSuvanto",
+    "desc": "Tarina menee näin: alussa soitamme satunnaisen kappaleen. Toimittajien tehtävänä on luoda uskottava ja kantava silta sen yli seuraavaan kappaleeseen. Tähän kappaleeseen toinen toimittaja vastaa uudella, paremmalla sillalla soittaen perään seuraavan kappaleen. \r\n\r\nKuinka kauas voi päästä kappaleesta X? Oletteko koskaan miettineet miltä kuulostaisi Hitchball suoritettuna peukalokyytien sisään aasinsiltoina kappaleiden välillä? Kuinka paljon mutsku soittaa musiikkia josta et todennäköisesti oo edes kuullut? Entä löydetäänkö vielä reitti takaisin X:ään? ",
+    "timestamp": "2017-04-20T13:57:52+03:00",
+    "photo": "https://wappuradio.fi/img/host/pelastakaaaasit-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/pelastakaaaasit-fs8.png"
+  },
+  {
+    "id": "04c906ab-43ec-48fe-ac75-e376a84dd35b",
+    "start": "2017-04-23T13:00:00+03:00",
+    "end": "2017-04-23T18:00:00+03:00",
+    "title": "Wappuradio LIVE!",
+    "host": "Bändit & Rakkaus",
+    "prod": "Jaketus",
+    "desc": "Wappuradio soittaa mitä parhainta, oudointa ja kiehtovinta musiikkia kaksi viikkoa levyiltä Wapun aikana. Nyt on kuitenkin taas ekstraherkkua tarjolla! Levyjen sijaan sunnuntaina radion musiikki soitetaan livenä TTY:n etunurtsilla, Riemurinne-areenalla. Virittäydy siis vastaanottimesi ääreen koko päiväksi nauttimaan Suomen parhaiden bändien joukosta kootusta kattauksesta! Tai vielä parempaa, ota kaverit mukaan ja tule Hervantaan viettämään piknik-päivää! Keikat alkavat kello 13 ja jatkuvat aina 18 asti. Paikalla myös liuta huikeita ruokakojuja, wappuradio, aurinko, wappukansa! Bändien välissä kuuntelijoita viihdyttää Suomen parhaan Rakkauden Wappuradion juontajat ja studiotrubaduuriduo Sipilän Serkut.\r\n\r\n13:00 Työelämän uhrit ►<a href=\"https://soundcloud.com/ty-el-m-n-uhrit\">https://soundcloud.com/ty-el-m-n-uhrit</a>\r\n14:15 Jukka Pojan Poika ja The Roopesalmiset ►<a href=\"https://soundcloud.com/jukkapojanpoika\">https://soundcloud.com/jukkapojanpoika</a>\r\n15:45 Elimäki ► <a href=\"https://soundcloud.com/elim-ki\">https://soundcloud.com/elim-ki</a>\r\n17:00 Torvikopla ► <a href=\"http://www.torvikopla.net/kuuntele/\">http://www.torvikopla.net/kuuntele/</a>",
+    "timestamp": "2017-04-20T14:02:40+03:00",
+    "photo": "https://wappuradio.fi/img/host/wappuradiolive-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/wappuradiolive-fs8.png"
+  },
+  {
+    "id": "d3b4be8a-22ad-42c5-a5e4-70def67180dc",
+    "start": "2017-04-23T07:00:00+03:00",
+    "end": "2017-04-23T09:00:00+03:00",
+    "title": "Eteerinen eetteri",
+    "host": "Ketku",
+    "prod": "Jarno",
+    "desc": "Pyydän: kuulkaa,\r\npyhät heimot,\r\nHeimdallrin ylemmät \r\nja alemmat pojat,\r\nsinä tahdot, Valfödr,\r\nettä tulkitsen taiten\r\nmitä ihmisten muinais-\r\nvaiheista muistan.\r\n\r\n",
+    "timestamp": "2017-04-20T21:12:34+03:00",
+    "photo": "https://wappuradio.fi/img/host/eteerineneetteri-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/eteerineneetteri-fs8.png"
+  },
+  {
+    "id": "5684324e-b523-47ee-a5f7-89bbbbfbf173",
+    "start": "2017-04-29T20:00:00+03:00",
+    "end": "2017-04-29T22:00:00+03:00",
+    "title": "Kolmen soinnun tähteet",
+    "host": "kurkku & Teemu",
+    "prod": "Jaketus",
+    "desc": "Kolmen soinnun tähteet täräyttää radioaalloille Wapun parhaat punk- ja skarytmit! Vedä tennarit jalkaan, kiristä henkselit ja lähde musiikkimatkalle kurkun ja Teemun kanssa!",
+    "timestamp": "2017-04-21T10:59:24+03:00",
+    "photo": "https://wappuradio.fi/img/host/kolmensoinnuntahteet-fs8.png",
+    "thumb": "https://wappuradio.fi/img/host/thumb/kolmensoinnuntahteet-fs8.png"
   }
 ]
